--- a/patches/client-admin/package.json
+++ b/patches/client-admin/package.json
@@ -47,10 +47,10 @@
     "prettier": "~2.2.1",
     "prettier-config-standard": "~4.0.0",
     "serve": "~11.3.2",
-    "webpack": "~5.75.0",
     "webpack-bundle-analyzer": "~4.4.0",
-    "webpack-cli": "~5.0.1",
-    "webpack-dev-server": "~4.6.0"
+    "webpack-dev-server": "~4.6.0",
+    "webpack": "~5.75.0",
+    "webpack-cli": "~5.0.1"
   },
   "dependencies": {
     "d3-scale": "~3.2.3",
@@ -62,7 +62,7 @@
     "prop-types": "~15.7.2",
     "react": "~16.14.0",
     "react-dom": "~16.14.0",
-    "react-easy-emoji": "~1.4.0",
+    "react-easy-emoji": "~1.8.1",
     "react-i18next": "^13.5.0",
     "react-redux": "7.2.2",
     "react-router-dom": "~5.2.0",
