--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "polis"]
     path = polis
     url = https://github.com/compdemocracy/polis.git
-    branch = edge
+    branch = stable
     update = merge
