--- a/patches/file-server/nginx/nginx-ssl.site.default.conf
+++ b/patches/file-server/nginx/nginx-ssl.site.default.conf
@@ -16,14 +16,19 @@ server {
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        
-         if ($host = "beta.polis.local") {
+        if ($host = "beta.polis.local") {
             proxy_pass http://df-participation:3000;
         }
 
         if ($host != "beta.polis.local") {
             proxy_pass http://server:5000;
         }
+        # Add timeout configurations
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        proxy_read_timeout 300;
+        proxy_buffering off;
+        proxy_request_buffering off;
     }
 }
 
