Improve local setup

--- a/digifinland-example.env
+++ b/digifinland-example.env
@@ -83,6 +83,7 @@ SHOULD_USE_TRANSLATION_API=false
 # If you are running a development server anywhere other than localhost:80 or localhost:5000,
 # you need to update API_DEV_HOSTNAME and EMBED_SERVICE_HOSTNAME.
 API_DEV_HOSTNAME=polis.local
+API_PROD_HOSTNAME=polis.local
 # If you are running polis on a custom domain, set both API_SERVER_HOSTNAME and DOMAIN_OVERRIDE
 # to the same value. In the future these will be combined into one setting.
 API_SERVER_HOSTNAME=polis.local
@@ -99,6 +100,7 @@ DOMAIN_WHITELIST_ITEM_08=
 EMBED_SERVICE_HOSTNAME=polis.local
 # Full hostname with protocol of your API server:
 REPORT_SERVICE_URL=http://polis.local:5000
+SERVICE_URL=${REPORT_SERVICE_URL}
 STATIC_FILES_HOST=file-server
 
 ###### THIRD PARTY API CREDENTIALS ######
