--- a/patches/file-server/nginx/nginx-ssl.site.default.conf
+++ b/patches/file-server/nginx/nginx-ssl.site.default.conf
@@ -11,24 +11,36 @@ server {
     ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
     ssl_prefer_server_ciphers on;
 
-    location / {
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        if ($host = "beta.polis.local") {
-            proxy_pass http://df-participation:3000;
-        }
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        if ($host != "beta.polis.local") {
-            proxy_pass http://server:5000;
-        }
-        # Add timeout configurations
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
-        proxy_read_timeout 300;
-        proxy_buffering off;
-        proxy_request_buffering off;
+    # Add timeout configurations
+    proxy_connect_timeout 300;
+    proxy_send_timeout 300;
+    proxy_read_timeout 300;
+    proxy_buffering off;
+    proxy_request_buffering off;
+
+    # Handle requests to the API server with exact path matching
+    location ~ ^/(favicon\.ico|home|signin|createuser|integrate|account|signout)$ {
+        proxy_pass http://server:5000;
+    }
+    # Handle requests to the API server with path prefixes
+    location ~ ^/(api/v3|m|static|report|locales|report_bundle|report_style) {
+        proxy_pass http://server:5000;
+    }
+    # Handle requests to the df-participation service
+    location ~ ^/(api|fi|sv|en|_next)/ {
+        proxy_pass http://df-participation:3000;
+    }
+
+    # Default catch-all location for all other requests can be changed to point to the old UI or df-participation as the new UI.
+    # If below catcha-all points to server:5000, you need to add locale manually to the URL, e.g. /fi/abcd
+    location / {
+        #proxy_pass http://server:5000; # Allows to see the old polis UI.
+        proxy_pass http://df-participation:3000; # Allows the middleware to handle requests without needing to specify the locale manually in the URL.
     }
 }
 
